davinci: parts: Allow to wake the screen instead of pulsing
 * Highly inspired by iOS raise to wake

Co-authored-by: Nauval Rizky <enuma.alrizky@gmail.com>
Co-authored-by: Fabian Leutenegger <fabian.leutenegger@bluewin.ch>
Change-Id: I1e74f8eafa51843e77d2d8c514c646a4494327cd

--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -35,12 +35,12 @@
     <string name="dc_dimming_enable_summary">Reduces eye strain in low light conditions</string>
     <string name="dc_dimming_enable_summary_not_supported">DC Dimming is currently not supported by the kernel</string>
 
-    <!-- Pick-up to wake gesture-->
-    <string name="wake_gesture_title">Wake up</string>
-    <string name="wake_gesture_summary">Wake up the device instead of pulsing notifications</string>
+    <!-- Raise to wake gesture-->
+    <string name="raise_to_wake_title">Wake up</string>
+    <string name="raise_to_wake_summary">Wake up the device instead of pulsing notifications</string>
 
-    <!-- Thermal Profiles -->
-    <string name="thermal_title">Thermal Profiles</string>
+    <!-- Thermal profiles -->
+    <string name="thermal_title">Thermal profiles</string>
     <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
     <string name="thermal_default">Default</string>
     <string name="thermal_benchmark">Benchmark</string>
