--- a/parts/res/values/strings.xml
+++ b/parts/res/values/strings.xml
@@ -39,12 +39,12 @@
     <string name="dc_dimming_enable_summary">Reduces eye strain in low light conditions</string>
     <string name="dc_dimming_enable_summary_not_supported">DC Dimming is currently not supported by the kernel</string>
 
-    <!-- Raise to wake gesture-->
-    <string name="raise_to_wake_title">Wake up</string>
-    <string name="raise_to_wake_summary">Wake up the device instead of pulsing notifications</string>
+    <!-- Pick-up to wake gesture-->
+    <string name="wake_gesture_title">Wake up</string>
+    <string name="wake_gesture_summary">Wake up the device instead of pulsing notifications</string>
 
-    <!-- Thermal profiles -->
-    <string name="thermal_title">Thermal profiles</string>
+    <!-- Thermal Profiles -->
+    <string name="thermal_title">Thermal Profiles</string>
     <string name="thermal_summary">Adjust per-app thermal profiles for optimum performance</string>
     <string name="thermal_default">Default</string>
     <string name="thermal_benchmark">Benchmark</string>
